@@ -9,7 +9,7 @@ import gov.nih.ncats.common.util.TimeUtil;
 import lombok.extern.slf4j.Slf4j;
 
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
 import java.io.*;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
@@ -499,7 +499,7 @@ public class Util {
 	
 	public static Object getAsNativeID(String idv){
     	if(idv.chars().allMatch( Character::isDigit )){
-    		return new Long(Long.parseLong(idv));
+    		return Long.valueOf(Long.parseLong(idv));
     	}else{
     		return idv;
     	}
